manifests/db-virtualmachine.yaml
apiVersion: v1
kind: Service
metadata:
  name: doom-db-service
  namespace: doom-demo
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    kubevirt.io/domain: doom-db-vm
